--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,4 @@
-<h2 id="title">Welcome to Ember</h2>
-
+<nav class="navbar navbar-inverse">
+    <a class="navbar-brand" href="{{'/'}}">questAnswer</a>
+</nav>
 {{outlet}}
