--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -6,17 +6,17 @@
         <form>
           <div class="form-group">
             <label for="name">Your Name</label>
-            {{input value=title id="title" class="form-control"}}
+            {{input value=name id="name" class="form-control"}}
           </div>
           <div class="form-group">
             <label for="title">Question</label>
-            {{input value=image id="image" class="form-control"}}
+            {{input value=title id="title" class="form-control"}}
           </div>
           <div class="form-group">
             <label for="body">Question Details</label>
-            {{input value=caption id="caption" class="form-control"}}
+            {{input value=body id="body" class="form-control"}}
           </div>
-          <button {{action 'save'}}>Save</button>
+          <button class="btn" {{action 'save'}}>Save</button>
         </form>
       </div>
   {{else}}
