--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,11 @@
 {{outlet}}
 
-
-
-{{new-question save="save"}}
+<div class="panel panel-default">
+  <div class="panel-heading">Current Questions</div>
+  <ul class="list-group">
+  {{#each model as |question|}}
+    <li class="list-group-item"><h4>{{question.name}} wants to know:</h4> {{question.title}}</li>
+  {{/each}}
+  </ul>
+  <div class="panel-footer">{{new-question save="save"}}</div>
+</div>
