--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,7 +5,10 @@
   <ul class="list-group">
   {{#each model as |question|}}
     {{#link-to 'question' question.id}}
-    <li class="list-group-item"><h5>{{question.name}} wants to know:</h5> {{question.title}}</li>
+    <li class="list-group-item">
+      <h5>{{question.name}} wants to know:</h5> {{question.title}}
+      <button class="btn btn-danger" {{action 'destroyQuestion' question}}>Delete</button>
+    </li>
     {{/link-to}}
   {{/each}}
   </ul>
