--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -1,1 +1,21 @@
 {{yield}}
+<div class="container">
+  {{#if addNewAnswer}}
+      <h3>Add New Answer</h3>
+      <div class="container">
+        <form>
+          <div class="form-group">
+            <label for="name">Your Name</label>
+            {{input value=name id="name" class="form-control"}}
+          </div>
+          <div class="form-group">
+            <label for="body">Answer</label>
+            {{input value=body id="body" class="form-control"}}
+          </div>
+          <button class="btn" {{action 'save'}}>Save</button>
+        </form>
+      </div>
+  {{else}}
+      <button class="btn" {{action 'answerFormShow'}}>Add New Answer</button>
+  {{/if}}
+</div>
