Add display for added answers

--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -1,5 +1,5 @@
 {{yield}}
-<div class="panel-body">
+<div class="panel-footer">
   {{#if addNewAnswer}}
       <h3>Add New Answer</h3>
       <div class="container">
