--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -10,5 +10,13 @@
 
 <div class="panel panel-default">
   <div class="panel-heading"><h2>Community Answers</h2></div>
+  <ul class="list-group">
+  {{#each model.answers as |answer|}}
+    <li class="list-group-item">
+      <h5>{{answer.name}} says: {{answer.body}}</h5> 
+      <!-- <button class="btn btn-danger" {{action 'destroyQuestion' question}}>Delete</button> -->
+    </li>
+  {{/each}}
+  </ul>
   {{new-answer saveAnswer="saveAnswer" question=model}}
 </div>
