--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -13,7 +13,7 @@
   <ul class="list-group">
   {{#each model.answers as |answer|}}
     <li class="list-group-item">
-      <h5>{{answer.name}} says: </h5> {{answer.body}}
+      <h5>{{format-date answer.date_added}} {{answer.name}} says: </h5> {{answer.body}}
       <!-- <button class="btn btn-danger" {{action 'destroyQuestion' question}}>Delete</button> -->
     </li>
   {{/each}}
