--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -10,7 +10,7 @@
           </div>
           <div class="form-group">
             <label for="body">Answer</label>
-            {{input value=body id="body" class="form-control"}}
+            {{textarea value=body id="body" class="form-control"}}
           </div>
           <button class="btn" {{action 'save'}}>Save</button>
         </form>
