--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -14,12 +14,12 @@
           </div>
           <div class="form-group">
             <label for="body">Question Details</label>
-            {{input value=body id="body" class="form-control"}}
+            {{textarea value=body id="body" class="form-control"}}
           </div>
-          <button class="btn" {{action 'save'}}>Save</button>
+          <button class="btn pull-right" {{action 'save'}}>Save</button>
         </form>
       </div>
   {{else}}
-      <button class="btn" {{action 'questionFormShow'}}>New Question</button>
+      <button class="btn center-block" {{action 'questionFormShow'}}>New Question</button>
   {{/if}}
 </div>
